--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="hu.bme.aut.android.sharedshoppinglist"
     tools:ignore="LockedOrientationActivity">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".ShoppingListApplication"
         android:allowBackup="true"
