--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,15 +38,10 @@ android {
 
 dependencies {
 
-    implementation 'com.github.cesarferreira:MaterialComponent.Banner:0.14.0'
-    implementation 'com.nambimobile.widgets:expandable-fab:1.1.1'
-    implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
-    implementation 'com.github.xabaras:RecyclerViewSwipeDecorator:1.3'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
@@ -55,12 +50,30 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // Other android dependencies
+    implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
     // Navigation Component dependencies
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    // Room db
+    // Room database
     def room_version = '2.3.0'
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation 'com.squareup.okhttp3:okhttp:4.9.2'
+
+    // Moshi
+    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.8.0"
+
+    // External dependencies
+    implementation 'com.github.cesarferreira:MaterialComponent.Banner:0.14.0'
+    implementation 'com.nambimobile.widgets:expandable-fab:1.1.1'
+    implementation 'com.github.xabaras:RecyclerViewSwipeDecorator:1.3'
 }
