--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,5 @@ dependencies {
     implementation 'com.github.cesarferreira:MaterialComponent.Banner:0.14.0'
     implementation 'com.nambimobile.widgets:expandable-fab:1.1.1'
     implementation 'com.github.xabaras:RecyclerViewSwipeDecorator:1.3'
+    implementation 'uk.co.samuelwall:material-tap-target-prompt:3.3.2'
 }
