--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,13 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        applicationVariants.all {
+            variant ->
+                variant.outputs.each {
+                    output ->
+                        output.outputFileName = "$variant.applicationId}-${variant.buildType.name}-${variant.versionName}.apk"
+                }
+        }
     }
     buildFeatures {
         viewBinding true
