--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
             variant ->
                 variant.outputs.each {
                     output ->
-                        output.outputFileName = "$variant.applicationId}-${variant.buildType.name}-${variant.versionName}.apk"
+                        output.outputFileName = "${variant.applicationId}-${variant.buildType.name}-${variant.versionName}.apk"
                 }
         }
     }
