--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,20 +1,16 @@
-# Workflow name
 name: Build
 
 on:
-  # When it will be triggered
-  # And in which branch
   pull_request:
   push:
     branches:
       - main
-# Where will they run
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
 
-      ## Checkout our repository ###
       - name: Checkout
         uses: actions/checkout@v2.3.3
 
@@ -23,7 +19,6 @@ jobs:
         with:
           java-version: 11
 
-      ## Build all our Build Types at once ##
       - name: Build all artifacts
         id: buildAllApks
         uses: eskatos/gradle-command-action@v1.3.3
@@ -34,7 +29,6 @@ jobs:
           configuration-cache-enabled: true
           arguments: assembleRelease
 
-      ## Sign our artifact##
       - name: Sign artifact
         id: signArtifact
         uses: r0adkll/sign-android-release@v1.0.1
@@ -45,7 +39,7 @@ jobs:
           keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_PASSWORD }}
 
-      - name: Upload our APK
+      - name: Upload APK
         uses: actions/upload-artifact@v2.2.0
         with:
           name: Release artifact
@@ -62,7 +56,7 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Save name of our Artifact
+      - name: Save name of Artifact
         id: set-result-artifact
         run: |
           ARTIFACT_PATHNAME_APK=$(ls app/build/outputs/apk/release/*.apk | head -n 1)
@@ -71,7 +65,7 @@ jobs:
           echo "ARTIFACT_PATHNAME_APK=${ARTIFACT_PATHNAME_APK}" >> $GITHUB_ENV
           echo "ARTIFACT_NAME_APK=${ARTIFACT_NAME_APK}" >> $GITHUB_ENV
 
-      - name: Upload our Artifact Assets
+      - name: Upload Artifact Assets
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
